--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Universal style */
 body{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 ul {
     list-style: none;
